--- a/Projeto2/Views/Produto/Cadastro.cshtml
+++ b/Projeto2/Views/Produto/Cadastro.cshtml
@@ -1,5 +1,26 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model Projeto2.Models.Produto
 @{
+    ViewData["Title"] = "Cadastro";
 }
+
+
+<h2>Register</h2>
+
+<form asp-action="Cadastro" method="post">
+
+    <div>
+        <label>Nome:</label>
+        <input asp-for="Nome" required />
+    </div>
+
+    <div>
+        <label>Descrição:</label>
+        <input asp-for="Descricao" required />
+    </div>
+    <div>
+        <label>Preco por unidade:</label>
+        <input asp-for="Preco" required />
+    </div>
+
+    <button type="submit">Novo Cadastro</button> 
+</form>>
