--- a/Projeto2/Views/Produto/Cadastro.cshtml
+++ b/Projeto2/Views/Produto/Cadastro.cshtml
@@ -2,25 +2,32 @@
 @{
     ViewData["Title"] = "Cadastro";
 }
+<head>
+    <link href="~/css/estilo.css" rel="stylesheet" />
+</head>
 
-
-<h2>Register</h2>
+<h2 id="titulo">Cadastrar Produto</h2>
 
 <form asp-action="Cadastro" method="post">
 
     <div>
         <label>Nome:</label>
-        <input asp-for="Nome" required />
+       <br />
+        <input asp-for="Nome" id="nome" maxlength="50" required />
     </div>
 
     <div>
         <label>Descrição:</label>
-        <input asp-for="Descricao" required />
+        <br />
+        <input asp-for="Descricao" id="desc" maxlength="70" required />
     </div>
     <div>
         <label>Preco por unidade:</label>
-        <input asp-for="Preco" required />
+        <br />
+        <input asp-for="Preco" id="preco" maxlength="6" required />
     </div>
 
-    <button type="submit">Novo Cadastro</button> 
-</form>>
+    <button type="submit">Cadastrar</button>
+    
+</form>
+
