--- a/Projeto2/Views/Usuario/Cadastro.cshtml
+++ b/Projeto2/Views/Usuario/Cadastro.cshtml
@@ -4,22 +4,27 @@
     ViewData["Title"] = "Cadastro";
 }
 
-<h2>Register</h2>
+<link href="~/css/estilo.css" rel="stylesheet" />
+
+<h2>Cadastrar Usuário</h2>
 
 <form asp-action="Cadastro" method="post">
 
     <div>
         <label>Nome:</label>
-        <input asp-for="Nome" required />
+        <br />
+        <input asp-for="Nome" maxlength="50" required />
     </div>
 
     <div>
         <label>Email:</label>
-        <input asp-for="Email" type="email" required />
+        <br />
+        <input asp-for="Email" type="email" maxlength="50" required />
     </div>
     <div>
         <label>Senha:</label>
-        <input asp-for="Senha" type="password" required />
+        <br />
+        <input asp-for="Senha" type="password" maxlength="50" required />
     </div>
 
     <button type="submit">Novo Cadastro</button> 
