--- a/Projeto2/Views/Usuario/Login.cshtml
+++ b/Projeto2/Views/Usuario/Login.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "Login";
 }
+<link href="~/css/estilo.css" rel="stylesheet" />
 
 <h1>Login</h1>
 <form asp-action="Login" method="post">
